crates/solverforge-macros/tests/ui/fail/chained_scalar_hook.stderr
error: chained planning variables cannot declare scalar runtime hook attributes
  --> tests/ui/fail/chained_scalar_hook.rs:8:5
   |
 8 | /     #[planning_variable(
 9 | |         chained = true,
10 | |         value_range_provider = "tasks",
11 | |         nearby_value_distance_meter = "previous_distance"
12 | |     )]
13 | |     pub previous: Option<usize>,
   | |_______________________________^
